k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-auth
spec:
  selector:
    matchLabels:
      app: j26-auth
  template:
    metadata:
      labels:
        app: j26-auth
    spec:
      containers:
        - name: app
          image: ghcr.io/scouterna/j26-auth:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: j26-auth-kv-csi
