k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j26-auth
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - dev.j26.se
      secretName: j26-tls
  rules:
    - host: dev.j26.se
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: j26-auth
                port:
                  number: 80
